--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Home" />
+        <activity android:name=".SeeNewPost" />
+        <activity android:name=".PostNew" />
+        <activity android:name=".ChangeTogether"></activity>
     </application>
 
 </manifest>
